<resources>
    <string name="app_name">Adrash</string>
    <string name="copyright">&#169; 2018</string>
    <string name="app_logo">App Logo</string>
    <string name="default_country_code">+251</string>
    <string name="phone_number_hint">phone number</string>
    <string name="password_hint">password</string>
    <string name="login">Get in</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="create_one">Register</string>
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="optional">Email (optional)</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register">Register</string>
    <string name="got_one">Got an account? Login</string>


    <string name="site_menu_home">Home</string>
    <string name="site_menu_profile">Profile</string>
    <string name="site_menu_saved_items">Element Salvati</string>
    <string name="site_menu_check_in">Check In</string>
    <string name="site_menu_setting">Settings</string>
</resources>
