<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_top"
    android:paddingTop="@dimen/padding_top"
    android:paddingRight="@dimen/padding_top"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_top"
        android:contentDescription="@string/app_logo"
        android:paddingStart="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_top"
        android:paddingRight="@dimen/padding_top"
        app:srcCompat="@drawable/ic_app_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">
        <!--  Phone Nulmber Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_card"
            android:layout_marginBottom="@dimen/margin_card"
            android:background="@color/background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/default_country_code"
                android:textColor="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/zero_length"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/login_phone_number"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_card"
            android:layout_marginBottom="@dimen/margin_card">

            <EditText
                android:id="@+id/login_password"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="@dimen/padding"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                style="@style/AppTheme.TextView"
                android:layout_width="@dimen/zero_length"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_top"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/forgot_password_string"
                android:textSize="@dimen/sign_up_text_size" />

            <TextView
                android:id="@+id/link_create_account"
                style="@style/AppTheme.TextView"
                android:layout_width="@dimen/zero_length"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_top"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/create_one"
                android:textSize="@dimen/sign_up_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>