<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_top"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_top"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/padding_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_top"
            android:contentDescription="@string/app_logo"
            android:paddingStart="@dimen/padding_top"

            android:paddingLeft="@dimen/padding_top"
            android:paddingEnd="@dimen/padding_top"
            android:paddingRight="@dimen/padding_top"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_logo_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_border"
            android:orientation="vertical"
            android:padding="@dimen/padding">
            <!--  First Name Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/register_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstName_hint"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/register_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName_hint"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding"
                    android:layout_marginRight="@dimen/padding"
                    android:layout_weight="1"
                    android:background="@drawable/phone_number_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/default_country_code"
                    android:textColor="@color/colorPrimaryDark" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/register_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        android:inputType="phone"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/optional"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card">

                <EditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_top"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="onRegisterUser"
                android:padding="@dimen/padding"
                android:text="@string/register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/link_back_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:gravity="center"
                android:onClick="openLogin"
                android:paddingTop="@dimen/margin_card"
                android:text="@string/got_one"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sign_up_text_size" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
